[gd_scene load_steps=2 format=3 uid="uid://dp2xb3fr3eafv"]

[ext_resource type="Script" uid="uid://bd0txl6ks1ss5" path="res://custom_scenes/ui/level_1hud.gd" id="1_5uhyo"]

[node name="Level1HUD" type="CanvasLayer"]
script = ExtResource("1_5uhyo")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1600, 900)
layout_mode = 3
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 412.0

[node name="PromptLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 306.0
offset_top = 469.0
offset_right = 487.0
offset_bottom = 538.0
theme_override_font_sizes/font_size = 30
text = "Prompt"

[node name="ReasonLabel" type="Label" parent="Control"]
visible = false
layout_mode = 0
offset_left = 488.0
offset_top = 350.0
offset_right = 1092.0
offset_bottom = 433.0
theme_override_font_sizes/font_size = 60
text = "Rescue took too long"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="Control"]
layout_mode = 2
offset_left = 126.0
offset_top = 37.0
offset_right = 485.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 40
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObjectiveContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 651.0
offset_top = 32.0
offset_right = 1010.0
offset_bottom = 138.0

[node name="ObjectiveNameLabel" type="Label" parent="Control/ObjectiveContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Duck Cover and Hold!"
horizontal_alignment = 1

[node name="ObjectiveStatusLabel" type="Label" parent="Control/ObjectiveContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Get into position!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ObjectiveFeedbackLabel" type="Label" parent="Control/ObjectiveContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "QTE completed!"
horizontal_alignment = 1
vertical_alignment = 1
